--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <input type = "text" placeholder = "Your Name" class = "Name">
         <input type = "text" placeholder = "Brief introduction about yourself" class = "intro">
     </div>
-    <div> 
+
+    <div class="section"> 
         <h2> Skills </h2>
         <input type = "text" class = "Skills-Description" placeholder = "Add Your Skills">
     </div>
-    <div> 
+    <div class="section"> 
         <h2>Projects</h2>
         <table id = "Projects">
             <tr>
